k8s-istio/rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo
  namespace: default
spec:
  host: demo.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
