k8s-istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demoapp-vs
spec:
  hosts:
    - "*"
  gateways:
    - demo-app-gateway
  http:
    - route:
        - destination:
            host: demo.default.svc.cluster.local
            subset: v1
          weight: 50
        - destination:
            host: demo.default.svc.cluster.local
            subset: v2
          weight: 50
